completing customer and restaurant admin functionality